feat: add calendar public API
